# CrewSchedulingOptmizer

./: CMakeLists.txt  CrewSchedulingOptimizer  README.md
include/: CrewScheduling.h
src/: CrewScheduling.cpp  main.cpp
